--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,19 @@
     </dependency>
     
     
-  </dependencies>
+    </dependencies>
+  	<distributionManagement>
+	    <repository>
+	      <id>nexus</id>
+	      <name>Nexus Repository</name>
+	      <url>http://10.191.87.55:8081/repository/maven-releases/</url>
+	    </repository>
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <url>http://10.191.87.55:8081/repository/maven-snapshots/</url>
+	    </snapshotRepository>
+	</distributionManagement>
   
   
    
